# slopbox

./: .copier-answers.yml  .gitignore  CLAUDE.md  README.md  copier.yml  pyproject.toml
.devcontainer/claude/: Dockerfile  devcontainer.json  init-firewall.sh
.devcontainer/claude/installers/: install-root.sh  install-user.sh
.github/workflows/: test.yml
devcontainer/: Dockerfile  devcontainer.env.example  devcontainer.json  git_askpass.sh  gitconfig  init-firewall.sh
template/: .extra-allowed-domains  .extra-allowed-domains.jinja  devcontainer.env.jinja  extra-allowed-domains.jinja  {{ _copier_conf.answers_file }}.jinja
template/{{ devcontainer_root }}/{{ container_name }}/: Dockerfile  Dockerfile.jinja  devcontainer.json.jinja  gitconfig  init-firewall.sh  p10k.zsh  startup.sh  startup.sh.jinja  zshrc
template/{{ devcontainer_root }}/{{ container_name }}/installers/: install-root.sh.jinja  install-user.sh.jinja
tests/: conftest.py  test_render.py
