[project]
name = "slopbox"
version = "0.0.0"
description = "Copier template for a Claude Code devcontainer sandbox"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "copier>=9.0",
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
